<?xml version="1.0"?>
<package>
  <name>arl_commons</name>
  <version>0.1.0</version>
  <description>The arl_commons package</description>

  <author email="arne.hitzmann@arl.sys.es.osaka-u.ac.jp">Arne Hitzmann</author>
  <maintainer email="arne.hitzmann@arl.sys.es.osaka-u.ac.jp">Arne Hitzmann</maintainer>
 
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arl_hw_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>arl_hw_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
